hphp/test/zend/bad/ext/gd/tests/libgd00101.php
<?php
$im = imagecreatefromgd(dirname(__FILE__) . '/libgd00101.gd');
var_dump($im);
?>